FE: Made the playlist table selectable, adding a behaviour subject to the selected playlist to retrieve its tracksBE: Added GetPlaylistTracks endpoint. Added Polly retry policy to Playlists HttpClient.
